--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,14 +6,12 @@
     <title>Lakshya</title>
 </head>
 <body>
-    <nav>LAKSHYA</nav>
+    <nav>
+        <p>LAKSHYA</p> 
+    </nav>
     <main>
-        <div class="toggleDiv">
-            <label for="toggleQuote" id="showQuote">
-                <input type="checkbox" id="toggleQuote" >
-                <span>Show Quote</span>
-            </label>
-        </div>
+        <p class="popupOption">features coming soon</p>
+        <small>Visit <a href="https://github.com/hokageCV/Varsh" target="_blank" style="color:black">here</a> for collaboration</small>
     </main>
     <script src="./popup.js" defer></script>
 </body>
