--- a/new_tab/new_tab.html
+++ b/new_tab/new_tab.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main class="container">
+        <h1 id="headline"></h1>
         <div id="calendar"></div>
         <div id="quoteDabba">
             <p id="quote"> Start where you are. Use what you have. Do what you can.</p>
