--- a/new_tab/new_tab.html
+++ b/new_tab/new_tab.html
@@ -15,6 +15,6 @@
             <p id="author">- Arthur Ashe</p>
         </div>
     </main>
-    <script src="./new_tab.js" defer></script>
+    <script type="module" src="./new_tab.js" defer></script>
 </body>
 </html>
