--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,8 +10,12 @@
         <p>LAKSHYA</p> 
     </nav>
     <main>
-        <p class="popupOption">features coming soon</p>
-        <small>Visit <a href="https://github.com/hokageCV/Varsh" target="_blank" style="color:black">here</a> for collaboration</small>
+        <section class="popupOption">
+            <label class="quote">
+                <input type="checkbox" id="quoteCheckbox">
+                Show Quote
+            </label>
+        </section>
     </main>
     <script src="./popup.js" defer></script>
 </body>
