--- a/new_tab/new_tab.html
+++ b/new_tab/new_tab.html
@@ -14,6 +14,16 @@
             <p id="quote"> Start where you are. Use what you have. Do what you can.</p>
             <p id="author">- Arthur Ashe</p>
         </div>
+
+        <div class="toast hidden">
+            <div class="toast-content">          
+              <div class="message">
+                <span class="text">Quote Copied to Clipboard</span>
+              </div>
+            </div>          
+            <div class="progress"></div>
+        </div>
+
     </main>
     <script type="module" src="./new_tab.js" defer></script>
 </body>
