--- a/background/onboard/onboard.html
+++ b/background/onboard/onboard.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>Hey, Enter Your Name</h1>
-        <input type="text" id="input" placeholder="Levi">
+        <input type="text" id="input" placeholder="name">
         <button id="btn">Begin</button>
     </main>
 </body>
