add option to change title

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,6 +16,10 @@
                 Show Quote
             </label>
         </section>
+        <section class="popupOption title">
+            <label>New Tab Title</label>
+            <input type="text" id="titleInput" maxlength="28">
+        </section>
     </main>
     <script src="./popup.js" defer></script>
 </body>
