--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,6 +16,12 @@
                 Show Quote
             </label>
         </section>
+        <section class="popupOption">
+            <label class="tasks">
+                <input type="checkbox" id="tasksCheckbox">
+                Show Tasks
+            </label>
+        </section>
         <section class="popupOption title">
             <label>New Tab Title</label>
             <input type="text" id="titleInput" maxlength="28">
