--- a/new_tab/new_tab.html
+++ b/new_tab/new_tab.html
@@ -8,8 +8,20 @@
 </head>
 <body>
     <main class="container">
+
         <h1 id="headline"></h1>
-        <div id="calendar"></div>
+        <div class="upperRow">
+            <div class="calDabba">
+                <div id="calendar"></div>
+            </div>
+            <div id="tasksDabba">
+                <h3><span id="din">Today's</span> 3 Main Tasks</h3>
+                <p contenteditable="true" id="task1"></p>
+                <p contenteditable="true" id="task2"></p>
+                <p contenteditable="true" id="task3"></p>
+            </div>
+        </div>
+        
         <div id="quoteDabba">
             <p id="quote"> Start where you are. Use what you have. Do what you can.</p>
             <p id="author">- Arthur Ashe</p>
