--- a/new_tab/new_tab.html
+++ b/new_tab/new_tab.html
@@ -16,9 +16,9 @@
             </div>
             <div id="tasksDabba">
                 <h3><span id="din">Today's</span> 3 Main Tasks</h3>
-                <p contenteditable="true" id="task1"></p>
-                <p contenteditable="true" id="task2"></p>
-                <p contenteditable="true" id="task3"></p>
+                <p>● <span contenteditable="true" id="task1" class="task-content"></span></p>
+                <p>● <span contenteditable="true" id="task2" class="task-content"></span></p>
+                <p>● <span contenteditable="true" id="task3" class="task-content"></span></p>
             </div>
         </div>
         
