Style checkbox as toggle

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <nav>
-        <p>LAKSHYA</p> 
+        <p>LAKSHYA</p>
     </nav>
     <main>
         <section class="popupOption">
             <label class="quote">
-                <input type="checkbox" id="quoteCheckbox">
+                <input type="checkbox" id="quoteCheckbox" class='input-checkbox'>
                 Show Quote
             </label>
         </section>
         <section class="popupOption">
             <label class="tasks">
-                <input type="checkbox" id="tasksCheckbox">
+                <input type="checkbox" id="tasksCheckbox" class='input-checkbox'>
                 Show Tasks
             </label>
         </section>
